[gd_scene load_steps=16 format=3 uid="uid://coj0rpsq3lw2u"]

[ext_resource type="FontFile" uid="uid://dbcudhplm1jri" path="res://ui/FreeMonoBold.ttf" id="1_8qgdy"]
[ext_resource type="Script" path="res://ui/scripts/characterdata-background.gd" id="1_wmnux"]
[ext_resource type="Texture2D" uid="uid://kmm12pkjfyce" path="res://ui/p/h/m/hm1.png" id="2_ibpye"]
[ext_resource type="Texture2D" uid="uid://bfl3rd44mjfhg" path="res://ui/menus/bbg.png" id="2_vj23k"]
[ext_resource type="Script" path="res://ui/scripts/backgrounddata.gd" id="4_i6dbm"]
[ext_resource type="Script" path="res://ui/scripts/background_cycle_button.gd" id="5_4bt7t"]
[ext_resource type="Script" path="res://ui/scripts/backocharcreationfrombackground.gd" id="5_i0j70"]
[ext_resource type="Script" path="res://ui/scripts/PlayThisCharacterButton.gd" id="8_4tqnm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3353b"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k0aic"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ti2a"]
bg_color = Color(0.0108317, 0.671387, 0.781926, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4qyai"]
bg_color = Color(0.599463, 0.108347, 0.913496, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_02g4h"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vqlv1"]
bg_color = Color(0.702844, 0.010397, 0.498715, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7jibr"]
bg_color = Color(0.542137, 0.229585, 0.854188, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[node name="CharacterBackground" type="Node2D"]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(500, 390)
offset_left = 45.0
offset_top = 42.0
offset_right = 1895.0
offset_bottom = 1052.0
theme_override_constants/separation = 50

[node name="characterdatacontainer" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(837, 0)
layout_mode = 2
script = ExtResource("1_wmnux")

[node name="charport" type="TextureRect" parent="HBoxContainer/characterdatacontainer"]
unique_name_in_owner = true
z_index = 3
custom_minimum_size = Vector2(156, 260)
layout_mode = 2
texture = ExtResource("2_ibpye")
expand_mode = 3
stretch_mode = 4

[node name="Control2" type="Control" parent="HBoxContainer/characterdatacontainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="charname" type="Label" parent="HBoxContainer/characterdatacontainer"]
unique_name_in_owner = true
z_index = 3
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_8qgdy")
theme_override_font_sizes/font_size = 31
text = "NAME"

[node name="charfaith" type="Label" parent="HBoxContainer/characterdatacontainer"]
unique_name_in_owner = true
z_index = 3
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_8qgdy")
theme_override_font_sizes/font_size = 31
text = "Faith
"

[node name="Control" type="Control" parent="HBoxContainer/characterdatacontainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="chargskills-label" type="Label" parent="HBoxContainer/characterdatacontainer"]
z_index = 3
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_8qgdy")
theme_override_font_sizes/font_size = 31
text = "General Skills
"

[node name="chargskills" type="Label" parent="HBoxContainer/characterdatacontainer"]
unique_name_in_owner = true
z_index = 3
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_8qgdy")
theme_override_font_sizes/font_size = 31
text = "GENERAL SKILLS
"

[node name="Control3" type="Control" parent="HBoxContainer/characterdatacontainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="charsskills-label" type="Label" parent="HBoxContainer/characterdatacontainer"]
z_index = 3
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_8qgdy")
theme_override_font_sizes/font_size = 31
text = "Specialized Skills
"

[node name="charsskills" type="Label" parent="HBoxContainer/characterdatacontainer"]
unique_name_in_owner = true
z_index = 3
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_8qgdy")
theme_override_font_sizes/font_size = 31
text = "SPECIAL SKILLS
"

[node name="backgrounddata" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(910, 250)
layout_mode = 2
script = ExtResource("4_i6dbm")

[node name="Control2" type="Control" parent="HBoxContainer/backgrounddata"]
custom_minimum_size = Vector2(10, 260)
layout_mode = 2

[node name="background_title" type="Label" parent="HBoxContainer/backgrounddata"]
unique_name_in_owner = true
z_index = 3
custom_minimum_size = Vector2(60, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Background Title"

[node name="background_bonus" type="RichTextLabel" parent="HBoxContainer/backgrounddata"]
unique_name_in_owner = true
z_index = 3
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "Background Description"
scroll_active = false

[node name="background_description" type="RichTextLabel" parent="HBoxContainer/backgrounddata"]
unique_name_in_owner = true
z_index = 3
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "Background Description"
scroll_active = false

[node name="Control" type="Control" parent="HBoxContainer/backgrounddata"]
custom_minimum_size = Vector2(10, 60)
layout_mode = 2

[node name="Panel" type="Panel" parent="."]
z_index = 1
custom_minimum_size = Vector2(120, 210)
offset_left = 24.0
offset_top = 20.0
offset_right = 841.0
offset_bottom = 660.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3353b")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_vj23k")

[node name="cycle_button" type="Button" parent="."]
unique_name_in_owner = true
z_index = 4
custom_minimum_size = Vector2(0, 80)
offset_left = 922.0
offset_top = 166.0
offset_right = 1832.0
offset_bottom = 246.0
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_k0aic")
theme_override_styles/hover = SubResource("StyleBoxFlat_5ti2a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4qyai")
text = "Next Background >>>"
script = ExtResource("5_4bt7t")

[node name="Back to Char Create" type="Button" parent="."]
custom_minimum_size = Vector2(240, 170)
offset_left = 30.0
offset_top = 720.0
offset_right = 684.0
offset_bottom = 890.0
theme_override_font_sizes/font_size = 29
theme_override_styles/normal = SubResource("StyleBoxFlat_02g4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_vqlv1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7jibr")
text = "Go Back To Character Generation"
script = ExtResource("5_i0j70")

[node name="Play This Character Button" type="Button" parent="."]
custom_minimum_size = Vector2(240, 170)
offset_left = 1078.0
offset_top = 778.0
offset_right = 1672.0
offset_bottom = 948.0
theme_override_font_sizes/font_size = 43
theme_override_styles/normal = SubResource("StyleBoxFlat_02g4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_vqlv1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7jibr")
text = "Play This Character"
script = ExtResource("8_4tqnm")

[connection signal="pressed" from="cycle_button" to="HBoxContainer/characterdatacontainer" method="_on_cycle_button_pressed"]
